--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/951/951971.png" />
+    <link rel="stylesheet" href="https://bootswatch.com/5/sketchy/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
     <title>To-Do List</title>
